Apply selection of language on setting module from support list dictionary

--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -53,10 +53,7 @@
                       <span [translate]="'current language'"></span>
                     </ion-label>
                     <ion-select (ionChange)="updateCurrentLanguage()" [(ngModel)]="currentLanguage" interface="action-sheet">
-                      <ion-option value="en">en</ion-option>
-                      <ion-option value="fr">fr</ion-option>
-                      <ion-option value="id">id</ion-option>
-                      <ion-option value="pt">pt</ion-option>
+                      <ion-option *ngFor="let translationCode of translationCodes" value="{{translationCode.code}}">{{translationCode.name}}</ion-option>
                     </ion-select>
                   </ion-item>
                 </ion-col>
