Apply translation of report app label from list of apps

--- a/src/pages/apps/apps.html
+++ b/src/pages/apps/apps.html
@@ -43,7 +43,7 @@
           <ion-thumbnail>
             <img class="menu-app-icon-list" src="assets/icon/reports.png">
           </ion-thumbnail>
-          <p class="menu-app" [translate]="'reports'">Reports</p>
+          <p class="menu-app" [translate]="'report'">Reports</p>
         </div>
       </ion-col>
     </ion-row>
