Fixing visibility of powered by hisptz

--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -163,7 +163,8 @@
           </span>
         </p>
         <p>
-          <span class="bottom-sLogan-title" [translate]="'powered by'">HISPTZ </span>
+          <span class="bottom-sLogan-title">
+            <span [translate]="'powered by'"></span> HISPTZ </span>
         </p>
       </ion-col>
     </ion-row>
