Update http client plugin

--- a/src/pages/event-capture/event-capture.html
+++ b/src/pages/event-capture/event-capture.html
@@ -83,7 +83,7 @@
                   </tr>
                   <tr *ngIf="tableLayout.rows.length == 0">
                     <td colspan="100%">
-                      <span [translate]="'there no data at the moment'"></span>>
+                      <span [translate]="'there no data at the moment'"></span>
                     </td>
                   </tr>
                 </tbody>
