--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -8,7 +8,7 @@
 
   <ion-navbar color="primary">
     <ion-title>
-      <span [translate]="'profile'"></span>
+      <span [translate]="'Profile'"></span>
     </ion-title>
   </ion-navbar>
 
