--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -8,7 +8,7 @@
 
   <ion-navbar color="primary">
     <ion-title>
-      <span [translate]="'about'"></span>
+      <span [translate]="'About'"></span>
     </ion-title>
   </ion-navbar>
 
@@ -75,13 +75,13 @@
           <div *ngIf="aboutContent.id == 'dataValues'">
             <div class="item-card" color="font-color">
               <ion-item>
-                <span [translate]="'synced'"></span>
+                <span [translate]="'Synced'"></span>
                 <ion-badge color="icon-color" item-end>{{ dataValuesStorage.online }}</ion-badge>
               </ion-item>
             </div>
             <div class="item-card" color="font-color">
               <ion-item>
-                <span [translate]="'not synced'"></span>
+                <span [translate]="'Not synced'"></span>
                 <ion-badge color="icon-color" item-end>{{ dataValuesStorage.offline }}</ion-badge>
               </ion-item>
             </div>
@@ -89,13 +89,13 @@
           <div *ngIf="aboutContent.id == 'eventStatus'">
             <div class="item-card" color="font-color">
               <ion-item>
-                <span [translate]="'synced'"></span>
+                <span [translate]="'Synced'"></span>
                 <ion-badge color="icon-color" item-end>{{ eventsStorage.online }}</ion-badge>
               </ion-item>
             </div>
             <div class="item-card" color="font-color">
               <ion-item>
-                <span [translate]="'not synced'"></span>
+                <span [translate]="'Not synced'"></span>
                 <ion-badge color="icon-color" item-end>{{ eventsStorage.offline }}</ion-badge>
               </ion-item>
             </div>
@@ -103,13 +103,13 @@
           <div *ngIf="aboutContent.id == 'eventForTrackerStatus'">
             <div class="item-card" color="font-color">
               <ion-item>
-                <span [translate]="'synced'"></span>
+                <span [translate]="'Synced'"></span>
                 <ion-badge color="icon-color" item-end>{{ eventsForTrackerStorage.online }}</ion-badge>
               </ion-item>
             </div>
             <div class="item-card" color="font-color">
               <ion-item>
-                <span [translate]="'not synced'"></span>
+                <span [translate]="'Not synced'"></span>
                 <ion-badge color="icon-color" item-end>{{ eventsForTrackerStorage.offline }}</ion-badge>
               </ion-item>
             </div>
@@ -117,13 +117,13 @@
           <div *ngIf="aboutContent.id == 'enrollment'">
             <div class="item-card" color="font-color">
               <ion-item>
-                <span [translate]="'synced'"></span>
+                <span [translate]="'Synced'"></span>
                 <ion-badge color="icon-color" item-end>{{ enrollmentStorage.online }}</ion-badge>
               </ion-item>
             </div>
             <div class="item-card" color="font-color">
               <ion-item>
-                <span [translate]="'not synced'"></span>
+                <span [translate]="'Not synced'"></span>
                 <ion-badge color="icon-color" item-end>{{ enrollmentStorage.offline }}</ion-badge>
               </ion-item>
             </div>
