--- a/src/pages/reports/report-view/report-view.html
+++ b/src/pages/reports/report-view/report-view.html
@@ -8,7 +8,7 @@
 
   <ion-navbar color="primary">
     <ion-title>
-      <span [translate]="'report view'"></span>
+      <span [translate]="'Report view'"></span>
     </ion-title>
   </ion-navbar>
 
@@ -38,13 +38,13 @@
               <br>
               <span *ngIf="selectedOrganisationUnit && selectedOrganisationUnit.id">
                 <b>
-                  <span [translate]="'organisation unit'"></span>
+                  <span [translate]="'Organisation unit'"></span>
                 </b> : {{ selectedOrganisationUnit.name }}
                 <br>
               </span>
               <span *ngIf="selectedPeriod && selectedPeriod.name">
                 <b>
-                  <span [translate]="'period'"></span>
+                  <span [translate]="'Period'"></span>
                 </b> : {{ selectedPeriod.name }}</span>
             </div>
           </div>
