--- a/src/pages/reports/reports.html
+++ b/src/pages/reports/reports.html
@@ -8,7 +8,7 @@
 
   <ion-navbar color="primary">
     <ion-title>
-      <span [translate]="'report'"></span>
+      <span [translate]="'Reports'"></span>
     </ion-title>
   </ion-navbar>
 
@@ -31,7 +31,7 @@
   </div>
 
   <div *ngIf="!isLoading">
-    <ion-searchbar animated="true" (ionInput)="getFilteredList($event)"></ion-searchbar>
+    <ion-searchbar animated="true" (ionInput)="getFilteredList($event)" placeholder="{{'Search'|translate}}"></ion-searchbar>
     <ion-grid>
       <ion-row>
         <ion-col>
@@ -46,7 +46,7 @@
               <ion-icon name="ios-arrow-forward" item-right></ion-icon>
             </ion-item>
             <ion-item *ngIf="reportList.length == 0">
-              <empty-list-notification [emptyListMessage]="'there is no report to select'"></empty-list-notification>
+              <empty-list-notification [emptyListMessage]="translationMapper['there is no report to select']"></empty-list-notification>
             </ion-item>
           </ion-list>
         </ion-col>
