Update translations for apps and utility app list

--- a/src/pages/account/account.html
+++ b/src/pages/account/account.html
@@ -21,7 +21,7 @@
           <ion-thumbnail>
             <img class="menu-app-icon-list" src="assets/icon/profile.png">
           </ion-thumbnail>
-          <p class="menu-app" [translate]="'profile'">Profile</p>
+          <p class="menu-app" [translate]="'Profile'"></p>
         </div>
       </ion-col>
       <ion-col [ngClass]="animationEffect.about" col-4 (tap)="goToView('about')">
@@ -29,7 +29,7 @@
           <ion-thumbnail>
             <img class="menu-app-icon-list" src="assets/icon/about.png">
           </ion-thumbnail>
-          <p class="menu-app" [translate]="'about'">About</p>
+          <p class="menu-app" [translate]="'About'"></p>
         </div>
       </ion-col>
       <ion-col [ngClass]="animationEffect.help" col-4 (tap)="goToView('help')">
@@ -37,7 +37,7 @@
           <ion-thumbnail>
             <img class="menu-app-icon-list" src="assets/icon/help.png">
           </ion-thumbnail>
-          <p class="menu-app" [translate]="'help'">Help</p>
+          <p class="menu-app" [translate]="'Help'"></p>
         </div>
       </ion-col>
     </ion-row>
@@ -48,7 +48,7 @@
           <ion-thumbnail>
             <img class="menu-app-icon-list" src="assets/icon/logout.png">
           </ion-thumbnail>
-          <p class="menu-app" [translate]="'logout'">Log out</p>
+          <p class="menu-app" [translate]="'Log out'"></p>
         </div>
       </ion-col>
 
