--- a/src/pages/apps/apps.html
+++ b/src/pages/apps/apps.html
@@ -8,7 +8,7 @@
 
   <ion-navbar color="primary">
     <ion-title>
-      <span [translate]="'apps'">Apps</span>
+      <span [translate]="'Apps'"></span>
     </ion-title>
   </ion-navbar>
 
@@ -24,7 +24,7 @@
           <ion-thumbnail>
             <img class="menu-app-icon-list" src="assets/icon/data-entry.png">
           </ion-thumbnail>
-          <p class="menu-app" [translate]="'data entry'">Data entry</p>
+          <p class="menu-app" [translate]="'Data entry'"></p>
         </div>
 
       </ion-col>
@@ -34,7 +34,7 @@
           <ion-thumbnail>
             <img class="menu-app-icon-list" src="assets/icon/event-capture.png">
           </ion-thumbnail>
-          <p class="menu-app" [translate]="'event capture'">Event capture</p>
+          <p class="menu-app" [translate]="'Event capture'"></p>
         </div>
       </ion-col>
 
@@ -43,7 +43,7 @@
           <ion-thumbnail>
             <img class="menu-app-icon-list" src="assets/icon/reports.png">
           </ion-thumbnail>
-          <p class="menu-app" [translate]="'report'">Reports</p>
+          <p class="menu-app" [translate]="'Reports'"></p>
         </div>
       </ion-col>
     </ion-row>
@@ -54,7 +54,7 @@
           <ion-thumbnail>
             <img class="menu-app-icon-list" src="assets/icon/dashboard.png">
           </ion-thumbnail>
-          <p class="menu-app" [translate]="'dashboard'">Dashboard</p>
+          <p class="menu-app" [translate]="'Dashboard'"></p>
         </div>
       </ion-col>
       <ion-col col-4 [ngClass]="animationEffect.tracker_capture" (tap)="goToView('tracker_capture')">
@@ -62,7 +62,7 @@
           <ion-thumbnail>
             <img class="menu-app-icon-list" src="assets/icon/tracker-capture.png">
           </ion-thumbnail>
-          <p class="menu-app" [translate]="'tracker capture'">Tracker capture</p>
+          <p class="menu-app" [translate]="'Tracker capture'"></p>
         </div>
       </ion-col>
       <ion-col col-4 [ngClass]="animationEffect.sync" (tap)="goToView('sync')">
@@ -70,7 +70,7 @@
           <ion-thumbnail>
             <img class="menu-app-icon-list" src="assets/icon/sync.png">
           </ion-thumbnail>
-          <p class="menu-app" [translate]="'sync'">Sync</p>
+          <p class="menu-app" [translate]="'Sync'"></p>
         </div>
       </ion-col>
     </ion-row>
@@ -81,7 +81,7 @@
           <ion-thumbnail>
             <img class="menu-app-icon-list" src="assets/icon/settings.png">
           </ion-thumbnail>
-          <p class="menu-app" [translate]="'settings'">Settings</p>
+          <p class="menu-app" [translate]="'Settings'"></p>
         </div>
       </ion-col>
     </ion-row>
