--- a/src/pages/account/account.html
+++ b/src/pages/account/account.html
@@ -7,7 +7,7 @@
 <ion-header>
   <ion-navbar color="primary">
     <ion-title>
-      <span [translate]="'account'">Account</span>
+      <span [translate]="'Account'"></span>
     </ion-title>
   </ion-navbar>
 </ion-header>
