--- a/src/pages/organisation-unit-selection/organisation-unit-selection.html
+++ b/src/pages/organisation-unit-selection/organisation-unit-selection.html
@@ -8,7 +8,7 @@
 
   <ion-toolbar color="primary">
     <ion-title>
-      <span [translate]="'organisation unit selection'"></span>
+      <span [translate]="'Organisation unit selection'"></span>
     </ion-title>
     <ion-buttons start>
       <button class="normalButton" ion-button text-capitalize full large (tap)="dismiss()">
