--- a/src/pages/program-selection/program-selection.html
+++ b/src/pages/program-selection/program-selection.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar color="primary">
     <ion-title>
-      <span [translate]="'program selection'"></span>
+      <span [translate]="'Program selection'"></span>
     </ion-title>
     <ion-buttons start>
       <button class="normalButton" ion-button text-capitalize full large (tap)="dismiss()">
@@ -13,7 +13,7 @@
 
 <ion-content>
 
-  <ion-searchbar animated="true" (ionInput)="getFilteredList($event)"></ion-searchbar>
+  <ion-searchbar animated="true" (ionInput)="getFilteredList($event)" placeholder="{{'Search'|translate }}"></ion-searchbar>
   <ion-grid>
     <ion-row>
       <ion-col>
@@ -23,7 +23,7 @@
             <span ion-text [color]="(currentProgram.id == program.id)? 'current': 'font-color'">{{ program.name}}</span>
           </ion-item>
           <ion-item *ngIf="programsList.length == 0">
-            <empty-list-notification [emptyListMessage]="'there is no program to select'"></empty-list-notification>
+            <empty-list-notification [emptyListMessage]="translationMapper['There is no program to select']"></empty-list-notification>
           </ion-item>
         </ion-list>
       </ion-col>
