Update translations on event capture modules

--- a/src/pages/event-capture/event-capture-register/event-capture-register.html
+++ b/src/pages/event-capture/event-capture-register/event-capture-register.html
@@ -8,7 +8,7 @@
 
   <ion-navbar color="primary">
     <ion-title>
-      <span [translate]="'event register'"></span>
+      <span [translate]="'Event register'"></span>
     </ion-title>
   </ion-navbar>
 </ion-header>
@@ -25,11 +25,11 @@
           <ion-col>
             <div (tap)="goBack()" padding-bottom class="item-card">
               <b>
-                <span [translate]="'organisation unit'"></span>
+                <span [translate]="'Organisation unit'"></span>
               </b> : {{ currentOrgUnit.name }}
               <br>
               <b>
-                <span [translate]="'program'"></span>
+                <span [translate]="'Program'"></span>
               </b> : {{ currentProgram.name }}
               <br>
             </div>
