--- a/src/pages/tracker-capture/tracker-capture.html
+++ b/src/pages/tracker-capture/tracker-capture.html
@@ -7,7 +7,9 @@
 <ion-header>
 
   <ion-navbar color="primary">
-    <ion-title>{{'tracker capture'|translate}}</ion-title>
+    <ion-title>
+      <span [translate]="'Tracker capture'"></span>
+    </ion-title>
   </ion-navbar>
 
 </ion-header>
@@ -30,12 +32,12 @@
           <div class="item-card" (click)="hideAndShowColumns()" color="font-color" padding-top padding-bottom ion-button clear text-center
             text-capitalize icon-start>
             <ion-icon name="ios-eye" color="icon-color"></ion-icon>
-            <span [translate]="'columns'"></span>
+            <span [translate]="'Columns'"></span>
           </div>
           <div class="item-card" (click)="registerNewTrackedEntity()" color="font-color" padding-top padding-bottom ion-button clear
             text-center text-capitalize icon-start>
             <ion-icon name="add" color="icon-color"></ion-icon>
-            <span [translate]="'add'"></span>
+            <span [translate]="'Add'"></span>
           </div>
         </div>
       </ion-col>
@@ -63,7 +65,7 @@
                   </tr>
                   <tr *ngIf="tableLayout.rows.length == 0">
                     <td colspan="100%">
-                      <span [translate]="'there no data at the moment'"></span>
+                      <span [translate]="'There no data at the moment'"></span>
                     </td>
                   </tr>
                 </tbody>
