Update translations in all parts on tracker capture module

--- a/src/pages/tracker-capture/tracked-entity-dashboard/tracked-entity-dashboard.html
+++ b/src/pages/tracker-capture/tracked-entity-dashboard/tracked-entity-dashboard.html
@@ -7,7 +7,7 @@
 <ion-header>
   <ion-navbar color="primary">
     <ion-title>
-      <span [translate]="'tracked entity dashboard'"></span>
+      <span [translate]="'Tracked entity dashboard'"></span>
     </ion-title>
   </ion-navbar>
 </ion-header>
@@ -33,7 +33,7 @@
                       </span>
                     </span>
                   </span>
-                  &nbsp; {{ currentWidget.name }}
+                  &nbsp; {{ currentWidget.name|translate }}
                 </div>
               </div>
               <div style="text-align: center" item-right float-right>
@@ -55,13 +55,13 @@
                   <div class="inputLabel">
                     <b>
                       <div class="inputLabel">
-                        <span [translate]="'enrollments'"></span>
+                        <span [translate]="'Enrollments'"></span>
                       </div>
                     </b>
                     <hr>
                   </div>
                   <div class="inputLabel">
-                    <span [translate]="'organisation unit'"></span>
+                    <span [translate]="'Organisation unit'"></span>
                   </div>
                   <div class="input-field-container">
                     <ion-item>
@@ -69,7 +69,7 @@
                     </ion-item>
                   </div>
                   <div class="inputLabel">
-                    <span [translate]="'program'"></span>
+                    <span [translate]="'Program'"></span>
                   </div>
                   <div class="input-field-container">
                     <ion-item>
@@ -81,7 +81,7 @@
                   <div class="inputLabel">
                     <b>
                       <div class="inputLabel">
-                        <span [translate]="'profile'"></span>
+                        <span [translate]="'Profile'"></span>
                       </div>
                     </b>
                     <hr>
