--- a/src/pages/tracker-capture/tracker-entity-register/tracker-entity-register.html
+++ b/src/pages/tracker-capture/tracker-entity-register/tracker-entity-register.html
@@ -8,7 +8,7 @@
 
   <ion-navbar color="primary">
     <ion-title>
-      <span [translate]="'registration'"></span>
+      <span [translate]="'Registration'"></span>
     </ion-title>
   </ion-navbar>
 </ion-header>
@@ -35,7 +35,7 @@
                       </span>
                     </span>
                   </span>
-                  &nbsp; {{ currentWidget.name }}
+                  &nbsp; {{ currentWidget.name|translate }}
                 </div>
               </div>
               <div style="text-align: center" item-right float-right>
@@ -57,13 +57,13 @@
                   <div class="inputLabel">
                     <b>
                       <div class="inputLabel">
-                        <span [translate]="'enrollments'"></span>
+                        <span [translate]="'Enrollments'"></span>
                       </div>
                     </b>
                     <hr>
                   </div>
                   <div class="inputLabel">
-                    <span [translate]="'enrolling organisation unit'"></span>
+                    <span [translate]="'Enrolling organisation unit'"></span>
                   </div>
                   <div class="input-field-container">
                     <ion-item>
@@ -71,7 +71,7 @@
                     </ion-item>
                   </div>
                   <div class="inputLabel">
-                    <span [translate]="'enrolling program'"></span>
+                    <span [translate]="'Enrolling program'"></span>
                   </div>
                   <div class="input-field-container">
                     <ion-item>
@@ -101,7 +101,7 @@
                   <div class="inputLabel">
                     <b>
                       <div class="inputLabel">
-                        <span [translate]="'profile'"></span>
+                        <span [translate]="'Profile'"></span>
                       </div>
                     </b>
                     <hr>
