--- a/src/pages/tracker-capture/tracker-hide-show-column/tracker-hide-show-column.html
+++ b/src/pages/tracker-capture/tracker-hide-show-column/tracker-hide-show-column.html
@@ -7,7 +7,7 @@
 <ion-header>
   <ion-toolbar color="primary">
     <ion-title>
-      <span [translate]="'visible header'"></span>
+      <span [translate]="'Visible header'"></span>
     </ion-title>
     <ion-buttons start>
       <button class="normalButton" ion-button text-capitalize full large (tap)="dismiss()">
@@ -24,12 +24,12 @@
       <ion-row>
         <ion-col>
           <button color="primary" (tap)="autoSelectFields(true)" round ion-button full>
-            <span [translate]="'select all'"></span>
+            <span [translate]="'Select all'"></span>
           </button>
         </ion-col>
         <ion-col>
           <button color="primary" (tap)="autoSelectFields(false)" round ion-button full>
-            <span [translate]="'deselect all'"></span>
+            <span [translate]="'Deselect all'"></span>
           </button>
         </ion-col>
       </ion-row>
@@ -44,7 +44,7 @@
       <ion-row>
         <ion-col>
           <button color="primary" round ion-button full (tap)="saveChanges()">
-            <span [translate]="'save'"></span>
+            <span [translate]="'Save'"></span>
           </button>
         </ion-col>
       </ion-row>
