--- a/src/pages/data-entry/data-dimension-selection/data-dimension-selection.html
+++ b/src/pages/data-entry/data-dimension-selection/data-dimension-selection.html
@@ -19,7 +19,7 @@
 
 
 <ion-content>
-  <ion-searchbar animated="true" autocomplete="on" (ionInput)="getFilteredList($event)"></ion-searchbar>
+  <ion-searchbar animated="true" autocomplete="on" placeholder="{{'Search'|translate}}" (ionInput)="getFilteredList($event)"></ion-searchbar>
   <ion-grid>
     <ion-row>
       <ion-col>
@@ -29,7 +29,7 @@
             <span ion-text [color]="(currentSelection.id == categoryOption.id) ?'current' : 'font-color'">{{ categoryOption.name }}</span>
           </ion-item>
           <ion-item *ngIf="categoryOptions.length == 0">
-            <empty-list-notification [emptyListMessage]="'there is no option to select'"></empty-list-notification>
+            <empty-list-notification [emptyListMessage]="'There is no option to select'"></empty-list-notification>
           </ion-item>
         </ion-list>
       </ion-col>
