--- a/src/pages/data-entry/data-entry-section-selection/data-entry-section-selection.html
+++ b/src/pages/data-entry/data-entry-section-selection/data-entry-section-selection.html
@@ -7,7 +7,7 @@
 <ion-header>
   <ion-toolbar color="primary">
     <ion-title>
-      <span [translate]="'data entry form sections'"></span>
+      <span [translate]="'Data entry form sections'"></span>
     </ion-title>
     <ion-buttons start>
       <button class="normalButton" ion-button text-capitalize full large (tap)="dismiss()">
@@ -19,7 +19,7 @@
 
 
 <ion-content>
-  <ion-searchbar animated="true" autocomplete="on" (ionInput)="getFilteredList($event)"></ion-searchbar>
+  <ion-searchbar animated="true" autocomplete="on" placeholder="{{'Search'|translate}}" (ionInput)="getFilteredList($event)"></ion-searchbar>
   <ion-grid>
     <ion-row>
       <ion-col>
@@ -29,7 +29,7 @@
             <span ion-text [color]="((currentIndex + 1) == pager.page) ?'current' : 'font-color'">{{ section.name }}</span>
           </ion-item>
           <ion-item *ngIf="sections.length == 0">
-            <empty-list-notification [emptyListMessage]="'there is nothing to select'"></empty-list-notification>
+            <empty-list-notification [emptyListMessage]="'There is nothing to select'"></empty-list-notification>
           </ion-item>
         </ion-list>
       </ion-col>
