--- a/src/pages/data-entry/data-set-selection/data-set-selection.html
+++ b/src/pages/data-entry/data-set-selection/data-set-selection.html
@@ -7,7 +7,7 @@
 <ion-header>
   <ion-toolbar color="primary">
     <ion-title>
-      <span [translate]="'data entry form selection'"></span>
+      <span [translate]="'Data entry form selection'"></span>
     </ion-title>
     <ion-buttons start>
       <button class="normalButton" ion-button text-capitalize full large (tap)="dismiss()">
@@ -20,7 +20,7 @@
 
 
 <ion-content class="data-entry-selection">
-  <ion-searchbar animated="true" autocomplete="on" (ionInput)="getFilteredList($event)"></ion-searchbar>
+  <ion-searchbar animated="true" autocomplete="on" placeholder="{{ 'Search'|translate }}" (ionInput)="getFilteredList($event)"></ion-searchbar>
   <ion-grid>
     <ion-row>
       <ion-col>
@@ -30,7 +30,7 @@
             <span ion-text [color]="(currentDataSet.id == dataSet.id) ?'current' : 'font-color'">{{ dataSet.name }}</span>
           </ion-item>
           <ion-item *ngIf="dataSetsList.length == 0">
-            <empty-list-notification [emptyListMessage]="'there is no data entry form to select'"></empty-list-notification>
+            <empty-list-notification [emptyListMessage]="translationMapper['There is no data entry form to select']"></empty-list-notification>
           </ion-item>
         </ion-list>
       </ion-col>
